--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,10 +2,28 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h4 class="section-heading">Encuentranos en aqu&iacute; - Zona Shopping Multiplaza</h4>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <div id="map"></div>
+                <script>
+                  function initMap() {
+                    var uluru = {lat: -25.315496, lng: -57.568381};
+
+                    var map = new google.maps.Map(document.getElementById('map'), {
+                      zoom: 15,
+                      center: uluru
+                    });
+                    var marker = new google.maps.Marker({
+                      position: uluru,
+                      map: map
+                    });
+                  }
+                </script>
+                <script async defer
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAP6WXEnA1nhzNv_NTcL97sJ-l57AErJI&callback=initMap">
+                </script>
+                <br/>
+                <a href="#" class="btn btn-default btn-xl">Te Esperamos</a>
             </div>
         </div>
     </div>
