--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>cOMPUFIBER</h1>
-            <hr>
-            <h2>Venta y Reparación de equipos informáticos e insumos</h2>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Mas info</a>
+            <h1>COMPUFIBER</h1>                   
         </div>
     </div>
 </header>
