--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,10 +15,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">Acerca de Nosotros</a>
-                </li>                
+                    <a class="page-scroll" href="#about">¿D&oacute;nde Estamos?</a>
+                </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Productos</a>
+                    <a class="page-scroll" href="#portfolio">Cat&aacute;logo</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contactenos</a>
